--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-hamburger-menu": "^1.2.1",
+    "react-hamburgers": "^1.0.0",
     "react-redux": "^7.2.1",
+    "react-responsive-modal": "^5.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-transition-group": "^4.4.1",
